<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini Activity Profile</string>
    <string name="this_category">Ini Fragment Category</string>
    <string name="category_lifestyle">Ke Fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile</string>
    <string name="show_dialog">Tampilkan Sebuah Dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="question_member">Siapa Yang Bukan Member Blackpink?</string>
    <string name="kim_jisoo">Kim Jisoo</string>
    <string name="kim_jennie">Kim Jennie</string>
    <string name="park_chaeyoung">Rose</string>
    <string name="lalisa_manoban">Lalisa Manoban</string>
    <string name="lee_jieun">IU</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>